# reindeer-comic

./: .gitignore  CLAUDE.md  README.md  library.db  package.json  svelte.config.js  vite.config.ts  vue.config.js
.github/workflows/: main.yml
public/: index.html
public/css/: fonts.css  materialdesignicons.min.css
src/: App.vue  background.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BookVeiw.vue  Library.vue
src/lib/components/: ComicReader.svelte  Library.svelte
src/plugins/: Utils.js  vuetify.js
src/routes/: +page.svelte
