[package]
name = "reindeer-comic"
version = "1.0.0"
description = "A modern comic reader built with Tauri and Svelte"
authors = ["you"]
license = ""
repository = ""
default-run = "reindeer-comic"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "dialog-open", "fs-read-file", "fs-read-dir", "path-all", "shell-open"] }
zip = "0.6"
image = "0.24"
base64 = "0.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
